--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,14 +1,14 @@
 name: Generate Snake
 
 on:
-
+  # run automatically every 24 hours
   schedule:
     - cron: "0 */24 * * *" 
   
-
+  # allows to manually run the job at any time
   workflow_dispatch:
   
-
+  # run on every push on the master/main branch
   push:
     branches:
     - main
@@ -22,20 +22,20 @@ jobs:
     timeout-minutes: 5
     
     steps:
-      
+      # Step 1: Generate the animation
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: SGcpu
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      
+      # Step 2: Push the file to the "output" branch
       - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/gh-action-github-pages@v3.1.0
+        uses: crazy-max/gh-action-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
