--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,14 +1,9 @@
 name: Generate Snake
 
 on:
-  # run automatically every 24 hours
   schedule:
     - cron: "0 */24 * * *" 
-  
-  # allows to manually run the job at any time
   workflow_dispatch:
-  
-  # run on every push on the master/main branch
   push:
     branches:
     - main
@@ -16,13 +11,11 @@ on:
 
 jobs:
   generate:
-    permissions: 
-      contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
     
     steps:
-      # Step 1: Generate the animation
+      # Generates the snake
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
@@ -33,11 +26,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      # Step 2: Push the file to the "output" branch
+      # Pushes it to the 'output' branch (Using peaceiris instead of crazy-max)
       - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/gh-action-github-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: output
+          publish_dir: dist
